fix media-with-tabs spacing and width

--- a/blocks/v2-media-with-tabs/v2-media-with-tabs.css
+++ b/blocks/v2-media-with-tabs/v2-media-with-tabs.css
@@ -112,7 +112,7 @@ button.v2-media-with-tabs__tab:focus-visible {
   }
 
   .v2-media-with-tabs__header-section {
-    width: 50%;
+    max-width: 332px;
   }
 }
 
@@ -124,20 +124,16 @@ button.v2-media-with-tabs__tab:focus-visible {
 
   .v2-media-with-tabs__images-section {
     order: 1;
-    width: 70%;
+    width: 100%;
   }
 
   .v2-media-with-tabs__texts-section {
     order: 2;
-    width: 30%;
+    max-width: 309px;
     justify-content: center;
   }
 
   /* media-right variant: images displayed on the right side */
-  .v2-media-with-tabs.v2-media-with-tabs--media-right {
-    padding: 0 32px 0 64px;
-  }
-
   .v2-media-with-tabs--media-right .v2-media-with-tabs__images-section {
     order: 2;
   }
@@ -175,6 +171,7 @@ button.v2-media-with-tabs__tab:focus-visible {
   .v2-media-with-tabs__header-section {
     order: 1;
     width: 100%;
+    max-width: unset;
   }
 
 }
